# ClawGuard

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
clawguard/: config.py  exceptions.py  pipeline.py
clawguard/analyzers/: ast_analyzer.py  base.py  llm.py  static.py
clawguard/api/: app.py  schemas.py
clawguard/clawhub/: __init__.py  bulk.py  client.py
clawguard/cli/: main.py
clawguard/db/: repository.py  schema.sql
clawguard/parser/: __init__.py  frontmatter.py  inventory.py  markdown.py  skill.py
clawguard/reports/: __init__.py  html_report.py  json_report.py  markdown_report.py  models.py
clawguard/rules/: patterns.py  signatures.py
clawguard/rules/yara/: credential_exposure.yar  network_exfil.yar  obfuscation.yar  prompt_injection.yar  social_engineering.yar
clawguard/scoring/: __init__.py  engine.py
frontend/: package.json  pnpm-lock.yaml
frontend/src/app/: layout.tsx  page.tsx
frontend/src/components/: navigation.tsx  scan-result.tsx
frontend/src/lib/: api.ts
tests/: conftest.py  test_api.py  test_ast_analyzer.py  test_clawhub.py  test_cli.py  test_db.py  test_llm_analyzer.py  test_parser.py  test_pipeline.py  test_reports.py  test_scoring.py  test_static_analyzer.py
tests/fixtures/: README.md
tests/fixtures/clean_complex_skill/: SKILL.md  install.sh  utils.py
tests/fixtures/clean_skill/: SKILL.md
tests/fixtures/excessive_permissions_skill/: SKILL.md
tests/fixtures/malicious_credential_harvester/: SKILL.md  setup.sh
tests/fixtures/memory_manipulation_skill/: SKILL.md
tests/fixtures/obfuscated_payload/: SKILL.md  (+1 more)
(+7 files in other folders)
