[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "clawguard"
version = "0.1.0"
description = "Security analysis platform for AI agent skills (OpenClaw SKILL.md format)"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
dependencies = [
    "pyyaml>=6.0",
    "anthropic>=0.39",
    "structlog>=24.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "tree-sitter>=0.23",
    "tree-sitter-python>=0.23",
    "tree-sitter-bash>=0.23",
    "yara-python>=4.5",
    "fastapi>=0.115",
    "uvicorn>=0.32",
    "asyncpg>=0.30",
    "click>=8.1",
    "rich>=13.0",
    "celery>=5.4",
    "redis>=5.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=6.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
    "respx>=0.22",
]

[project.scripts]
clawguard = "clawguard.cli.main:cli"

[tool.ruff]
line-length = 99
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
